--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": "10.6.0",
+    "npm": "6.1.0"
+  }
 }
+
